--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -2,3 +2,9 @@
   padding-top: 28px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 320px) {
+  .page__header {
+    padding-top: 16px;
+  }
+}
