--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,5 @@
 .cover__overlay {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../../../images/cover-trains.jpg");
+  background: url("../../../images/cover-trains.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -16,6 +15,7 @@
 
 .cover__overlay::after {
   content: "";
+  background: rgba(42, 44, 47, 0.3);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -26,26 +26,35 @@
 }
 
 .cover__overlay:hover::after {
-  content: "";
-  background: #2a2c2f;
-  opacity: 0.8;
+  background: rgba(42, 44, 47, 0.8);
 }
 
 @media screen and (max-width: 1024px) {
   .cover__overlay {
-    min-height: initial;
-    height: calc(100vw / 1.6);
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
-    min-height: initial;
-    height: calc(100vw / 1.5);
+    min-height: 480px;
   }
 }
 
-/* @media screen and (max-width: 23.43rem) {
+@media screen and (max-width: 610px) {
   .cover__overlay {
+    min-height: 380px;
   }
-} */
+}
+
+@media screen and (max-width: 425px) {
+  .cover__overlay {
+    min-height: 260px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__overlay {
+    min-height: 200px;
+  }
+}
