--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,10 +2,10 @@
   max-width: 690px;
   font-size: 16px;
   line-height: 26px;
-  margin: 40px 0 0 0;
+  margin: 40px 0 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .intro__text {
     max-width: 100%;
   }
