--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,27 +1,33 @@
 .lead__image {
   width: 100%;
-  /* height: auto;
-  object-fit: contain; */
-  margin: 64px auto 0;
-  /* transition: 0.9s; */
 }
 
-@media screen and (max-width: 1280px) {
+/*
+@media screen and (max-width: 768px) {
   .lead__image {
-    margin-top: 56px;
+    max-width: 768px;
+  }
+} */
+
+@media screen and (max-width: 768px) {
+  .lead__image {
+    width: calc(100% + 48px);
+    margin-left: -24px;
+    margin-right: -24px;
   }
 }
 
-@media screen and (max-width: 768px) {
+/*
+@media screen and (max-width: 320px) {
+  .lead__image {
+    max-width: 320px;
+  }
+} */
+
+@media screen and (max-width: 320px) {
   .lead__image {
     width: calc(100% + 32px);
     margin-left: -16px;
     margin-right: -16px;
-  }
-}
-
-@media screen and (max-width: 610px) {
-  .lead__image {
-    margin-top: 40px;
   }
 }
