--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -13,15 +13,23 @@
   }
 }
 
+@media screen and (max-width: 750px) {
+  .lead__title {
+    font-size: 80px;
+    line-height: 84px;
+  }
+}
+
 @media screen and (max-width: 610px) {
   .lead__title {
-    font-size: 70px;
-    line-height: 74px;
+    font-size: 50px;
+    line-height: 54px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__title {
+    max-width: 100%;
     width: 288px;
     font-size: 40px;
     line-height: 44px;
