--- a/blocks/main/__cover/main__cover.css
+++ b/blocks/main/__cover/main__cover.css
@@ -1,16 +1,16 @@
 .main__cover {
   margin: 92px auto 0;
 }
-/*
-@media screen and (max-width: 1280px) {
+
+@media screen and (max-width: 1024px) {
   .main__cover {
     width: calc(100% + 96px);
     margin-left: -48px;
     margin-right: -48px;
   }
-} */
+}
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .main__cover {
     width: calc(100% + 48px);
     margin-left: -24px;
@@ -18,10 +18,11 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .main__cover {
     width: calc(100% + 32px);
     margin-left: -16px;
     margin-right: -16px;
+    margin-top: 66px;
   }
 }
