--- a/blocks/main/__lead/main__lead.css
+++ b/blocks/main/__lead/main__lead.css
@@ -2,8 +2,8 @@
   margin: 56px 100px 0;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
   .main__lead {
-    margin: 48px auto 0;
+    margin: 48px 0 0;
   }
 }
