--- a/pages/index.css
+++ b/pages/index.css
@@ -1,15 +1,68 @@
-@import url("../vendor/normalize.css");
-@import url("../fonts/Inter/inter.css");
-@import url("../blocks/root/root.css");
-@import url("../blocks/page/page.css");
+@import "../vendor/normalize.css";
+@import "../fonts/Inter/inter.css";
+@import "../blocks/root/root.css";
+@import "../blocks/page/page.css";
+@import "../blocks/page/__header/page__header.css";
+@import "../blocks/page/__footer/page__footer.css";
 
-@import url("../blocks/header/header.css");
-@import url("../blocks/main/main.css");
-@import url("../blocks/lead/lead.css");
-@import url("../blocks/intro/intro.css");
-@import url("../blocks/photo-grid/photo-grid.css");
-@import url("../blocks/places/places.css");
-@import url("../blocks/place/place.css");
-@import url("../blocks/website/website.css");
-@import url("../blocks/cover/cover.css");
-@import url("../blocks/footer/footer.css");
+/* HEADER */
+@import "../blocks/header/header.css";
+@import "../blocks/header/__logo/header__logo.css";
+@import "../blocks/header/__lang/header__lang.css";
+@import "../blocks/header/__lang-item/header__lang-item.css";
+@import "../blocks/header/__lang-item/_active/header__lang-item_active.css";
+
+/* MAIN */
+@import "../blocks/main/main.css";
+@import "../blocks/main/__lead/main__lead.css";
+@import "../blocks/main/__intro/main__intro.css";
+@import "../blocks/main/__photo-grid/main__photo-grid.css";
+@import "../blocks/main/__places/main__places.css";
+@import "../blocks/main/__cover/main__cover.css";
+
+/* Lead */
+@import "../blocks/lead/lead.css";
+@import "../blocks/lead/__title/lead__title.css";
+@import "../blocks/lead/__subtitle/lead__subtitle.css";
+@import "../blocks/lead/__figure/lead__figure.css";
+@import "../blocks/lead/__image/lead__image.css";
+@import "../blocks/lead/__image-caption/lead__image-caption.css";
+
+/* Intro */
+@import "../blocks/intro/intro.css";
+@import "../blocks/intro/__title/intro__title.css";
+@import "../blocks/intro/__text/intro__text.css";
+@import "../blocks/intro/__facts/intro__facts.css";
+@import "../blocks/intro/__fact/intro__fact.css";
+
+/* Photo-grid */
+@import "../blocks/photo-grid/photo-grid.css";
+@import "../blocks/photo-grid/__item/photo-grid__item.css";
+
+/* Places */
+@import "../blocks/places/places.css";
+
+/* Place */
+@import "../blocks/place/place.css";
+@import "../blocks/place/__heading/place__heading.css";
+@import "../blocks/place/__img/place__img.css";
+@import "../blocks/place/__description/place__description.css";
+@import "../blocks/place/__paragraph/place__paragraph.css";
+@import "../blocks/place/__website/place__website.css";
+
+/* Website */
+@import "../blocks/website/website.css";
+@import "../blocks/website/__title/website__title.css";
+@import "../blocks/website/__link/website__link.css";
+
+/* Cover */
+@import "../blocks/cover/cover.css";
+@import "../blocks/cover/__overlay/cover__overlay.css";
+@import "../blocks/cover/__title/cover__title.css";
+@import "../blocks/cover/__subtitle/cover__subtitle.css";
+
+/* FOOTER */
+@import "../blocks/footer/footer.css";
+@import "../blocks/footer/__menu/footer__menu.css";
+@import "../blocks/footer/__menu-link/footer__menu-link.css";
+@import "../blocks/footer/__copyright/footer__copyright.css";
