--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,6 @@
 .header__logo {
   width: 176px;
-  height: 51px;
+  height: 52px;
   transition: opacity 0.2s linear;
 }
 
@@ -8,8 +8,9 @@
   opacity: 0.7;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   .header__logo {
-    max-width: 142px;
+    width: 142px;
+    height: 42px;
   }
 }
