--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,23 @@
 .header {
   display: flex;
   justify-content: space-between;
+  padding-top: 28px;
+}
+
+@media screen and (max-width: 1280px) {
+  .header {
+    padding: 28px 48px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 28px 24px 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .header {
+    padding: 16px 16px 0;
+  }
 }
