--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,1 +1,21 @@
+.intro {
+  margin: 92px 148px 0;
+}
 
+@media screen and (max-width: 1024px) {
+  .intro {
+    margin: 92px 48px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    margin: 88px 24px 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .intro {
+    margin: 64px 16px 0;
+  }
+}
