--- a/blocks/lead/__image-caption/lead__image-caption.css
+++ b/blocks/lead/__image-caption/lead__image-caption.css
@@ -1,7 +1,25 @@
 .lead__image-caption {
-  margin: 8px auto 0;
+  padding: 8px 148px 0;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__image-caption {
+    padding: 8px 48px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__image-caption {
+    padding: 8px 24px 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__image-caption {
+    padding: 8px 16px 0;
+  }
 }
