--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,33 +1,21 @@
 .lead__image {
+  display: block;
   width: 100%;
+  max-width: 984px;
+  margin: 0 auto;
+  object-fit: contain;
 }
 
-/*
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .lead__image {
-    max-width: 768px;
-  }
-} */
-
-@media screen and (max-width: 768px) {
-  .lead__image {
-    width: calc(100% + 48px);
-    margin-left: -24px;
-    margin-right: -24px;
+    max-width: 928px;
+    width: 90.625%;
   }
 }
 
-/*
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
   .lead__image {
-    max-width: 320px;
-  }
-} */
-
-@media screen and (max-width: 320px) {
-  .lead__image {
-    width: calc(100% + 32px);
-    margin-left: -16px;
-    margin-right: -16px;
+    padding: 0;
+    width: 100%;
   }
 }
