--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,17 +11,18 @@
     font-size: 16px;
     line-height: 20px;
     margin-top: 16px;
+    max-width: 340px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__subtitle {
-    width: 70%;
+    max-width: 300px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__subtitle {
-    width: 288px;
+    max-width: 288px;
   }
 }
