--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,16 +7,11 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1024px) {
-  .lead__title {
-    margin: 48px auto 0;
-  }
-}
-
 @media screen and (max-width: 750px) {
   .lead__title {
     font-size: 80px;
     line-height: 84px;
+    max-width: 670px;
   }
 }
 
@@ -24,14 +19,14 @@
   .lead__title {
     font-size: 50px;
     line-height: 54px;
+    max-width: 420px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__title {
-    max-width: 100%;
-    width: 288px;
     font-size: 40px;
     line-height: 44px;
+    max-width: 288px;
   }
 }
