--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 213px;
-  grid-gap: 16px;
+  gap: 16px;
   justify-content: center;
 }
 
@@ -30,6 +30,6 @@
 @media screen and (max-width: 320px) {
   .photo-grid {
     grid-auto-rows: 216px;
-    grid-row-gap: 14px;
+    row-gap: 12px;
   }
 }
