--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,11 +1,11 @@
 .place__description {
   display: grid;
-  grid-row-gap: 26px;
+  row-gap: 26px;
   align-content: start;
 }
-/*
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 425px) {
   .place__description {
-    grid-row-gap: 1.5rem;
+    margin: 0 16px;
   }
-} */
+}
