--- a/blocks/place/__img/place__img.css
+++ b/blocks/place/__img/place__img.css
@@ -4,8 +4,6 @@
 
 @media screen and (max-width: 425px) {
   .place__img {
-    width: calc(100% + 32px);
-    margin-left: -16px;
-    margin-right: -16px;
+    max-width: 425px;
   }
 }
