--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,9 @@
 .place__website {
   align-content: end;
 }
+
+@media screen and (max-width: 425px) {
+  .place__website {
+    margin: 0 16px;
+  }
+}
