--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,25 +1,25 @@
 .place {
   display: grid;
   grid-template-columns: repeat(2, minmax(min-content, 1fr));
-  grid-row-gap: 48px;
-  grid-column-gap: 40px;
+  row-gap: 48px;
+  column-gap: 40px;
 }
 
 @media screen and (max-width: 1280px) {
   .place {
-    grid-column-gap: 32px;
+    column-gap: 32px;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .place {
-    grid-column-gap: 28px;
+    column-gap: 28px;
   }
 }
 
 @media screen and (max-width: 610px) {
   .place {
     grid-template-columns: 1fr;
-    grid-row-gap: 32px;
+    row-gap: 32px;
   }
 }
