--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,16 +1,16 @@
 .places {
   display: grid;
-  grid-row-gap: 80px;
+  row-gap: 80px;
 }
 
 @media screen and (max-width: 1024px) {
   .places {
-    grid-row-gap: 72px;
+    row-gap: 72px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places {
-    grid-row-gap: 50px;
+    row-gap: 50px;
   }
 }
