--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 
 /* HEADER */
 @import "../blocks/header/header.css";
+@import "../blocks/header/__link/header__link.css";
 @import "../blocks/header/__logo/header__logo.css";
 @import "../blocks/header/__lang/header__lang.css";
 @import "../blocks/header/__lang-item/header__lang-item.css";
